[tool.poetry]
name = "clip"
version = "0.1.0"
description = ""
authors = ["mark-todd <markpeter.todd@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
ftfy = "^6.1.1"
regex = "^2022.10.31"
tqdm = "^4.64.1"
torch = "^1.13.1"
torchvision = "^0.14.1"


[tool.poetry.dev-dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
